--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,20 @@ html{
     scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar{
+    width: 10px;
+}
+
+::-webkit-scrollbar-track{
+    background-color: #fff;
+    border: none;
+}
+
+::-webkit-scrollbar-thumb{
+    border-radius: 2px;
+    background-color: #bdd431;
+}
+
 :root{
     --white-color: #e8e5fa;
     --black-color: #09061b;
@@ -135,6 +149,9 @@ ul{
     font-family: var(--ff-raleway);
     font-weight: var(--fw-headings);
     text-transform: uppercase;
+    font-size: 24px;
+    color: transparent;
+    -webkit-text-stroke: 1px var(--black-color);
 }
 
 #projects h2{
@@ -291,6 +308,11 @@ footer a:hover::after{
 @media screen and (max-width: 600px) {
     #intro h1{
         font-size: 48px;
+    }
+
+    #intro h1::before{
+        top: -2px;
+        left: -2px;
     }
 
     #intro p{
