--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,10 @@ html{
 }
 
 ::-webkit-scrollbar{
-    width: 10px;
+    width: 0px;
 }
 
-::-webkit-scrollbar-track{
+/* ::-webkit-scrollbar-track{
     background-color: #fff;
     border: none;
 }
@@ -22,7 +22,7 @@ html{
 ::-webkit-scrollbar-thumb{
     border-radius: 2px;
     background-color: #bdd431;
-}
+} */
 
 :root{
     --white-color: #e8e5fa;
@@ -305,13 +305,45 @@ footer a:hover::after{
     width: 100%;
 }
 
+.loader{
+    width: 100dvw;
+    height: 100dvh;
+    background-color: var(--white-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.loader > span{
+    height: 50px;
+    width: 10px;
+    border-radius: 10px;
+    background-color: var(--blue-color);
+    animation: height 1s ease-in-out infinite alternate;
+}
+
+.loader > span:nth-child(2n+1){
+    animation: height 0.5s ease-in-out infinite alternate;
+}
+
+@keyframes height {
+    0%{
+        height: 0px;
+    }
+    100%{
+        height: 50px;
+    }    
+}
+
+
 @media screen and (max-width: 600px) {
     #intro h1{
         font-size: 48px;
     }
 
     #intro h1::before{
-        top: -2px;
+      top: -2px;
         left: -2px;
     }
 
