--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,15 @@ ul{
     margin: 60px 0;
 }
 
+.projectImage{
+    overflow: hidden;
+    transition: all 2s ease-in;
+}
+
+.projectImage > img:hover{
+    transform: scale(1.1);
+}
+
 .projectCard h3{
     font-size: 24px;
 }
